--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,7 @@ marquee{
   display: none; /* Hide scrollbar in WebKit (Chrome, Safari, Edge) */
 }
 .year{
+  font-family: 'Black ops',sans-serif ;
   text-shadow:     0 0 5px #ff00ff, /* First layer of glow */
   0 0 10px #ff0000, 
   0 0 20px #ff0000, 
@@ -65,7 +66,7 @@ marquee{
 /* date button */
 .dbtn{
   cursor: pointer;
-  margin: 5px;
+  margin: 14px;
   border-radius: 5px;
   border-left: 20px solid transparent; /* Left border is transparent */
   border-right: 20px solid transparent; /* Right border is transparent */
@@ -87,12 +88,19 @@ marquee{
     height: min-content;
   }
   .year{
+    position:absolute;
+    bottom: 0px;
     flex-direction: row;
     align-items: center;
+    font-size: 3rem;
   }
   .dbtn{
+    border-left: 10px solid transparent; /* Left border is transparent */
+    border-right: 10px solid transparent; /* Right border is transparent */
+    border-bottom: 20px solid #007bff; /* Bottom border forms the visible triangle */
     rotate: 90deg;
   }
+
   .dbtn:first-child{
     rotate: -90deg;
   }
