--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@ body {
   font-family: 'Bebas Neue', sans-serif;
   color: white;
 }
+/* navbar */
 h2{
   font-size: 4rem;
   font-family: 'Black ops',sans-serif;
@@ -54,6 +55,9 @@ h2{
 }
 
 marquee {
+  position: absolute;
+  left: -800px;
+  rotate: -45deg;
   font-family: 'Black ops', sans-serif;
   background: rgba(255, 255, 255, 0.288);
   backdrop-filter: blur(10px); /* Adds glass-like effect */
@@ -65,6 +69,23 @@ marquee {
 .menu::-webkit-scrollbar {
   display: none; /* Hide scrollbar in WebKit (Chrome, Safari, Edge) */
 }
+
+.light{
+   rotate: -135deg;
+   height: 63px;
+   width: 63px;
+   box-shadow: 
+   inset 20px 20px 120px rgb(246, 246, 0),
+   20px 20px 50px yellow,
+   -30px 30px 70px yellow,
+   30px -30px 70px yellow,
+   -50px -50px 100px yellow
+   ;
+   
+}
+
+
+
 .year{
   font-family: 'Black ops',sans-serif ;
   text-shadow:     0 0 5px #ff00ff, /* First layer of glow */
@@ -95,17 +116,42 @@ marquee {
   flex-direction: row;
 }
 .task{
-  display: inline-block;
+  max-height: min-content;
+  width: 200px;
+  margin: 0px 40px;
+  text-align: center;
+  padding: 10px 50px;
+  display: flex;
   word-wrap: normal;
   letter-spacing: 2px;
   font-size: 20px;
   align-items: start;
   justify-content: center;
-  box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: inset 2px 4px 20px rgba(102, 102, 102, 0.5);
   transition: box-shadow 0.3s ease;
   cursor: pointer;
 }
-
+.project{
+  height: 60vh;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.card{
+  text-align: center;
+  min-width: 200px;
+  min-height: 120px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: min-content;
+  background-color: #ff0000;
+  margin: 10px;
+}
+.card p{
+  font-size: 2rem;
+}
 @keyframes bounce {
   0%, 100% { transform: translateY(0); }
   50% { transform: translateY(-5px); }
@@ -170,7 +216,14 @@ marquee {
 
   .dbtn:first-child{
     rotate: -90deg;
-  }}
+  }
+  marquee{
+    left: -100px;
+  
+  }
+
+
+}
 
 .project{
   color: rgba(125, 255, 125, 0.936);
