--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,16 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  background-color: rgb(180, 177, 177);
+  overflow: hidden;
+  background: linear-gradient(
+  45deg,
+   #768892 30%,
+   #566970 
+  );
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
   background-blend-mode: overlay;
   overflow: hidden;
   font-family: 'Bebas Neue', sans-serif;
@@ -118,7 +127,10 @@ marquee {
    
 }
 
-
+.left p,.right p{
+  font-family: 'Black ops',sans-serif;
+  font-size: 40px;
+}
 
 .year{
   font-family: 'Black ops',sans-serif ;
@@ -245,6 +257,10 @@ marquee {
 }
 @media (max-width: 600px){
   body{
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    width: 100vw;
     overflow: scroll;
   }
   .hero{
