--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,8 @@
 html {
   scroll-behavior: smooth;
 }
-body {
+body{
+  width: 100vw;
   overflow: hidden;
   background: linear-gradient(
   45deg,
@@ -53,9 +54,9 @@ h2{
   font-family: 'Black ops',sans-serif;
 }
 .social .left img{
-  height: 40px;
-  width: 40px;
-  margin: 10px;
+  height: 60px;
+  width: 60px;
+  margin: 15px 20px;
   cursor: pointer;
 }
 /*cloud*/
@@ -186,6 +187,7 @@ marquee {
   cursor: pointer;
 }
 .project{
+  margin-top:120px ;
   height: 60vh;
   display: flex;
   justify-content: space-evenly;
@@ -199,51 +201,13 @@ marquee {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: min-content;
+  padding: 20px;
   color: white;
   background-color: #615f5f52;
   border: 1px solid white;
   margin: 10px;
   border-radius: 10px;
-  transition: .5s;
   cursor: pointer;
-}
-.card:hover{
-   animation-name: card;
-  animation-duration: 2s;
-  animation-timing-function: ease-out;
-  animation-delay: 0s;
-  animation-iteration-count: infinite;
-  border: 5px solid;
-  scale: .9;
-}
-@keyframes card {
-  0% {
-    border-top-color: rgb(24, 204, 0);
-    border-left-color: rgb(0, 0, 255);
-    border-right-color: rgb(0, 140, 255);
-    border-bottom-color: rgb(226, 0, 0) ;
-  }
-  33%{
-    border-top-color: rgb(0, 187, 0);
-    border-left-color: rgb(255, 0, 0);
-    border-right-color: rgb(186, 0, 133);
-    border-bottom-color: rgb(0, 103, 105) ;
-
-
-  }
-  66%{
-    border-top-color: rgb(0, 187, 0);
-    border-left-color: rgb(186, 0, 133);
-    border-right-color: rgb(0, 103, 105);
-    border-bottom-color: rgb(255, 0, 0) ;
-  }
-  100%{
-    border-top-color:rgb(255, 0, 0) ;
-    border-left-color:rgb(0, 187, 0) ;
-    border-right-color:rgb(186, 0, 133) ;
-    border-bottom-color:rgb(0, 103, 105)  ;
-  }
 }
 .card p{
   font-size: 2rem;
@@ -262,6 +226,18 @@ marquee {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); /* Flexible columns */
   column-count: 3;
+}
+.Form{
+  width: min-content;
+  padding: 20px 40px;
+  height: 500px ;
+  display: flex;
+  border: 2px solid black;
+  flex-direction: column;
+}
+.Form input{
+  padding: 4px 6px;
+  border: 2px solid black;
 }
 @media (max-width: 600px){
   body{
