--- a/src/App.css
+++ b/src/App.css
@@ -12,10 +12,15 @@
   font-weight: normal;
   font-style: normal;
 }
+*{
+  padding: 0;
+  margin: 0;
+}
 html {
   scroll-behavior: smooth;
 }
 body{
+  box-sizing: border-box;
   width: 100vw;
   overflow: hidden;
   background: linear-gradient(
@@ -32,8 +37,14 @@ body{
   font-family: 'Bebas Neue', sans-serif;
   color: rgb(255, 255, 255);
 }
+main{
+  height: 100%;
+  width: 100%;
+}
 nav{
   background-color: rgb(53, 53, 53);
+  padding: 10px 25px;
+  margin-top: 30px;
 }
 
 .Logo{
@@ -49,50 +60,27 @@ nav{
   height: 8rem ;
   width:20rem;
 }
-h2{
-  font-size: 4rem;
-  font-family: 'Black ops',sans-serif;
-}
 .social .left img{
   height: 60px;
   width: 60px;
   margin: 15px 20px;
   cursor: pointer;
 }
-/*cloud*/
-/* .cloud{
-  box-shadow: inset 10px 10px 40px rgba(255, 235, 235, 0.685),
-              inset -10px 10px 40px rgba(255, 255, 255, 0.632),
-              -10px 10px 40px white,
-              40px 20px 40px white
-              ;
-
-}
-
-.random-shape-div {
-  border: 1px solid white;
-  background-color:rgba(255, 255, 255, 0.057);
-  border-radius: 50%;
-  z-index: -99;
-  box-shadow: 50px 400px 200px white,
-              100px 40px 200px white, 
-              50px 400px 100px white;
-  position: relative; /* To contain potential children if needed */
-
-
-
-
-
-
 .menu{
   transition: .4s;
   transform-origin: center;
   /* overflow:scroll; */
   flex-wrap: wrap;
+  width: 50%;
+  padding: 10px 20px;
   scrollbar-3dlight-color: blueviolet;
   -ms-overflow-style: none;  /* Hide scrollbar in IE/Edge */
   scrollbar-width: none;      /* Hide scrollbar in Firefox */
-  
+  align-items: center;
+}
+.menu li{
+  padding: 5px 10px;
+  font-size: 20px;
 }
 .menu ul li:hover{
   color: black;
@@ -105,94 +93,12 @@ h2{
   border-radius:25px;
   color: rgb(255, 0, 0);
 }
-
-marquee {
-  position: absolute;
-  left: -800px;
-  rotate: -45deg;
-  font-family: 'Black ops', sans-serif;
-  background: rgba(255, 255, 255, 0.288);
-  backdrop-filter: blur(10px); /* Adds glass-like effect */
-  color: rgb(0, 0, 0);
-  background-size: 200% 200%;
-}
-
 /* Add this in your global styles (e.g., styles.css) */
 .menu::-webkit-scrollbar {
   display: none; /* Hide scrollbar in WebKit (Chrome, Safari, Edge) */
 }
-
-.light{
-   rotate: -135deg;
-   height: 63px;
-   width: 63px;
-   box-shadow: 
-   inset 20px 20px 120px rgb(246, 246, 0),
-   20px 20px 50px yellow,
-   -30px 30px 70px yellow,
-   30px -30px 70px yellow,
-   -50px -50px 100px yellow
-   ;
-   
-}
-
-.left p,.right p{
-  font-family: 'Black ops',sans-serif;
-  font-size: 40px;
-}
-
-.year{
-  font-family: 'Black ops',sans-serif ;
-  text-shadow:     0 0 5px #ff00ff, /* First layer of glow */
-  0 0 10px #ff0000, 
-  0 0 20px #ff0000, 
-  0 0 40px #ff0000, 
-  0 0 80px #ff0000;
-  
-}
-/* date button */
-.dbtn{
-  cursor: pointer;
-  margin: 14px;
-  border-radius: 5px;
-  cursor: pointer;
-  margin: 14px;
-  border-radius: 5px;
-  border-left: 20px solid transparent;
-  border-right: 20px solid transparent;
-  border-bottom: 40px solid #007bff;
-  transition: transform 0.2s ease-in-out, background-color 0.3s ease;
-
-}
-.dbtn:hover {
-  transform: scale(1.1);
-}
 .hero{
   flex-direction: row;
-}
-.task{
-  /* max-height: min-content;
-  width: 200px; */
-  margin: 0px 40px;
-  text-align: center;
-  padding: 10px 50px;
-  display: flex;
-  word-wrap: normal;
-  letter-spacing: 2px;
-  font-size: 20px;
-  align-items: start;
-  justify-content: center;
-  box-shadow: inset 2px 4px 20px rgba(102, 102, 102, 0.5);
-  transition: box-shadow 0.3s ease;
-  cursor: pointer;
-}
-.project{
-  margin-top:120px ;
-  height: 60vh;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-wrap: wrap;
 }
 .card{
   text-align: center;
@@ -212,32 +118,26 @@ marquee {
 .card p{
   font-size: 2rem;
 }
-.info{
-    position: absolute;
-    flex-wrap: wrap;
-    width: min-content;
-    height: 40px;
-    display: flex;
-    flex-direction: column;
-    left: 50%;
-
-  }
-.right{
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); /* Flexible columns */
-  column-count: 3;
-}
 .Form{
-  width: min-content;
-  padding: 20px 40px;
+  min-width:60vw;
+  border-radius: 10px;
   height: 500px ;
   display: flex;
   border: 2px solid black;
+  margin: 40px 10px;
   flex-direction: column;
+  overflow: hidden;
+  color: green;
+  background-color: black;
 }
 .Form input{
+  width: 200px;
+  margin: 5px 10px;
   padding: 4px 6px;
   border: 2px solid black;
+}
+.mobile{
+  display: none;
 }
 @media (max-width: 600px){
   body{
@@ -247,55 +147,47 @@ marquee {
     width: 100vw;
     overflow: scroll;
   }
+  main{
+    overflow: hidden;
+  }
   .hero{
     flex-direction: column;
   }
-  
-  .info{
+  .pic{
+    visibility: hidden;
+  }
+  nav{
+    height: 50px;
+    margin: unset;
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    justify-content: space-around;
+  }
+  .mobile{
+    display: unset;
+    width: 40px;
+    height: 40px;
+  }
+  .pc,.name,.menu,.icon{
     display: none;
   }
-  .task{
-    letter-spacing: 1px;
-    margin-top: 10px;
+  .resume{
+    top: 40px;
+    bottom: unset;
   }
-  .left,.right{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100vw;
-    height: min-content;
+  .social{
+    right: 0px;
+    left: unset;
+    top: 120px;
+    width: 100px;
   }
-  .right{
-    padding-top: 10px;
+  .social img,.social a{
+    margin: unset;
+    width: 100px;
   }
-  .year{
-    position:absolute;
-    bottom: 10px;
-    flex-direction: row;
-    align-items: center;
-    font-size: 3rem;
+  .active{
+    scale: 1.3;
   }
-  .dbtn{
-    border-left: 10px solid transparent; /* Left border is transparent */
-    border-right: 10px solid transparent; /* Right border is transparent */
-    border-bottom: 20px solid #007bff; /* Bottom border forms the visible triangle */
-    rotate: 90deg;
-  }
-  .dbtn:first-child{
-    rotate: -90deg;
-  }
-  marquee{
-    top: 0px;
-    rotate: -45deg;
-    /* right: -100px; */
-  
-  }
-
-
-}
-
-.project{
-  color: rgba(125, 255, 125, 0.936);
-  padding: 10px 5px  ;
 }
 
