--- a/src/App.css
+++ b/src/App.css
@@ -42,15 +42,51 @@ main{
   width: 100%;
 }
 nav{
-  background-color: rgb(53, 53, 53);
-  padding: 10px 25px;
+  background-color:rgb(64, 30, 123);
+  padding: 20px 25px;
   margin-top: 30px;
 }
-
+#search{
+  font-family: sans-serif;
+  padding-left: 20px;
+  margin-bottom: 20px;
+}
 .Logo{
   
   height: fit-content;
 }
+
+/* welcome                ------start   */
+marquee{
+  letter-spacing: 2px;
+  border-radius: 10px;
+}
+.welcome{
+  background-color: #2B2D42;
+}
+.welcome img{
+  height: 80px;
+  rotate: 180deg;
+}
+.welcome img:last-child{
+  rotate: 0deg;
+}
+.welcome button{
+  z-index: 99;
+  /* padding: 8px 30px; */
+  width: 150px;
+  height: 60px;
+  font-size: 25px;
+  background-color: #8D99AE;
+  color:#2B2D42 ;
+  border-radius: 10px;
+  cursor: pointer;
+}
+.play{
+  display: none;
+}
+
+
 /* enter */
 .button{
   text-transform: uppercase;
@@ -121,10 +157,10 @@ nav{
 .Form{
   min-width:60vw;
   border-radius: 10px;
-  height: 500px ;
+  height: 400px ;
   display: flex;
   border: 2px solid black;
-  margin: 40px 10px;
+  margin: 100px 10px;
   flex-direction: column;
   overflow: hidden;
   color: green;
@@ -132,15 +168,20 @@ nav{
 }
 .Form input{
   width: 200px;
-  margin: 5px 10px;
+  margin: 10px 10px;
   padding: 4px 6px;
   border: 2px solid black;
 }
 .mobile{
   display: none;
 }
+.greet{
+  color: rgb(244, 232, 178);
+  font-size: 40px;
+}
 @media (max-width: 600px){
   body{
+    position: relative;
     margin: 0;
     padding: 0;
     height: 100vh;
@@ -149,6 +190,7 @@ nav{
   }
   main{
     overflow: hidden;
+
   }
   .hero{
     flex-direction: column;
@@ -159,7 +201,6 @@ nav{
   nav{
     height: 50px;
     margin: unset;
-    position: absolute;
     bottom: 0px;
     width: 100%;
     justify-content: space-around;
@@ -188,6 +229,12 @@ nav{
   }
   .active{
     scale: 1.3;
+  }
+  .play{
+    display: unset;
+    margin-top: 20px;
+    height: 40x;
+    cursor: pointer;
   }
 }
 
