--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,7 @@ nav{
   justify-content: center;
   padding: 7px 20px ;
   margin: 0px 10px;
-  color: #ffffff;
+  color: rgba(255, 255, 255, 0.776);
   z-index: 1;
   background-color: var(--primary-color);
   border-radius: 20px;
@@ -63,33 +63,35 @@ nav{
 .active{
   border-radius: 20px;
   position: relative;
-  background: linear-gradient(
+  color: rgb(255, 255, 255);
+  /* background: linear-gradient(
     to bottom , #444444 60%,green
-  );
+  ); */
 }
-.active::after{
+.menu ul li::after{
   content: " ";
   z-index: 0;
   position: absolute;
-  bottom: 0px;
+  bottom: 2px;
   left: 50%;
   transform: translate(-50%);
   height: 5px;
   width: 40px;
   background-color:  var(--terminal-text);
-  box-shadow: 0px -5px 15px var(--terminal-text);
+  box-shadow: 0px -10px 20px var(--terminal-text);
   border-radius: 5px;
 }
 .menu-button{
-  height: 50px;
-  width: 50px;
+  margin-top: 10px;
+  height: min-content;
+  width: min-content;
   background-color: rgba(255, 0, 0, 0);
   display: grid;
   transform-origin: center;
   grid-template-columns: 20px 20px;
   grid-template-rows: 20px 20px;
-  justify-items: center;
-  align-items: center;
+  /* justify-items: center; */
+  /* align-items: center; */
   cursor: pointer;
   position: relative;
   z-index: 99;
@@ -111,6 +113,10 @@ nav{
   border-radius: 50%;
   border-bottom-left-radius: 50%;
   background-color: transparent;  /* main */
+}
+.MobileList{
+  z-index: 99;
+  display: none;
 }
 .theme{
   z-index: 2;
@@ -200,7 +206,10 @@ main{
 .hand{
   position:absolute;
   top: -5px;
-  right: 60%;
+  right: 0%;
+  width: 100%;
+  height: 100%;
+  /* background-color: red; */
 }
 .hand:hover{
   rotate: 20deg;
@@ -220,7 +229,7 @@ main{
   -webkit-backdrop-filter: blur(10px); /* Safari support */
   border-radius: 10px; /* Rounded corners */
   border: 1px solid rgba(255, 255, 255, 0.3); /* Subtle border */
-  padding: 20px; /* Some spacing */
+  padding: 20px;  /*Some spacing */
   color: white; /* Text color */
 }
 .right .skills .tech{
@@ -283,13 +292,45 @@ main{
   height: 100vh;
   width: 100vw;
  }
+ .top{
+  z-index: 0;
+ }
 
 @media (max-width:600px) {
   nav{
     background-color: transparent;
     border-bottom: 2px solid var(--secondary-color);
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
     scrollbar-width: none;
+    z-index: 99;
+  }
+  .MobileList{
+    display: flex;
+    background-color: var(--secondary-color);
+    flex-direction: column;
+    /* height: min-content; */
+    color: white;
+    /* width: min-content; */
+    padding: 10px;
+    border-radius: 5px;
+    z-index: 99;
+  }
+  .MobileList .icons{
+    width: 40px;
+    margin: 5px;
+    height: 50px;
+    display: flex;
+    border-radius: 5px;
+    align-items: center;
+  }
+  .MobileList .icons img{
+    height: 40px;
+  }
+  .active{
+    background-color: #DA0037;
+  }
+  .backGround{
+    display: none;
   }
   .menu{
     display: none;
@@ -303,23 +344,32 @@ main{
   /* Home page style  */
   main,.top{
     flex-direction: column;
+    height: min-content;
   }
   pre{
     font-size: 25px;
   }
   .right{
-    height: min-content;
   margin-left: 0px;
   margin-top:50vmin;
+  /* background-color: red; */
 
+  }
+  .center{
+    flex-direction: column;
+  }
+  .center p{
+    text-align: center;
+    font-size: 22px;
+    padding: 5px;
   }
   .right p{
     text-align: center;
     width: 100vw;
     font-size: 26px;
   }
-  main .left,.top .left,.right{
+  main .left,.top .left,.right,.center{
     width: 100vw;
-    height: 40vh;
+    height: min-content;
   }
 }
