--- a/src/App.css
+++ b/src/App.css
@@ -161,7 +161,7 @@ main{
   flex-direction: column;
 }
 .card{
-  height: 15rem;
+  height: min-content;
   width: 12rem;
   background: rgba(255, 255, 255, 0.034); /* Transparent white */
   backdrop-filter: blur(10px); /* Blurring effect */
@@ -172,8 +172,15 @@ main{
   color: white; /* Text color */
   border-radius:5px;
   border-top-left-radius: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin: 10px;
+  cursor: pointer;
 }
 .card p{
+  margin-bottom: 10px;
   font-size: 18px;
   font-weight: 600;
 }
@@ -189,11 +196,17 @@ main{
   border-radius: 4px;
   letter-spacing: 1px;
 }
-
+.center{
+  /* background: red;  */
+  width: 35%;
+  padding: 10px;
+}
+.right{
+  border: 4px solid white;
+}
 .center h2{
   position: relative;
   font-family: 'Bebas Neue';
-  text-align: center;
   font-size: 30px;
   letter-spacing: 1px;
 }
@@ -203,13 +216,15 @@ main{
   font-family: 'Black ops';
 
 }
+.center p{
+  text-align: center;
+}
 .hand{
+  height: 50vh;
   position:absolute;
-  top: -5px;
+  /* top: -5px; */
   right: 0%;
   width: 100%;
-  height: 100%;
-  /* background-color: red; */
 }
 .hand:hover{
   rotate: 20deg;
@@ -219,11 +234,16 @@ main{
   margin-top: 30px;
   height: 80vh;
 }
+.left{
+  width: 27%;
+  padding-left: 5%;
+}
 .right{
   min-width: 30vw;
   height: min-content;
   margin-top: 150px;
   margin-left: 30px;
+  text-align: center;
   background: rgba(255, 255, 255, 0.034); /* Transparent white */
   backdrop-filter: blur(10px); /* Blurring effect */
   -webkit-backdrop-filter: blur(10px); /* Safari support */
@@ -231,6 +251,7 @@ main{
   border: 1px solid rgba(255, 255, 255, 0.3); /* Subtle border */
   padding: 20px;  /*Some spacing */
   color: white; /* Text color */
+  text-align: center;
 }
 .right .skills .tech{
   cursor: pointer;
@@ -243,9 +264,6 @@ main{
 .top{
   position: relative;
   z-index: 99;
-}
-.center p{
-  display: none;
 }
 .backGround{
   height: 87vh;
@@ -298,7 +316,73 @@ main{
  .top{
   z-index: 0;
  }
-
+ /*----------------------------------------Project page*/
+ .project{
+  height: 100%;
+  width: 100vw;
+  display: flex;
+  justify-content: space-around;
+  padding-top: 20px;
+ }
+ .stack{
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.242); /* Transparent white */
+  backdrop-filter: blur(10px); /* Blurring effect */
+  -webkit-backdrop-filter: blur(10px); /* Safari support */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 4px solid;
+ }
+/* ----------------------------------------connect page */
+.terminal{
+  margin-top: 30px;
+  background-color: var(--secondary-color
+  );
+  color: var(--text-color);
+}
+.ttop{
+  background: var(--unique-color);
+}
+input,textarea{
+  color: var(--text-color);
+  border: 2px solid var(--primary-color);
+  width:90%;
+  margin-left: 20px;
+  padding: 5px
+}
+.send{
+  width: 100%;
+  padding:5px;
+  cursor: pointer;
+  background-color: var(--terminal-text);
+}
+label{
+  color: var(--text-color
+  );
+  margin: 5px  10px;
+}
+.connect h2{
+  margin-top: 20px;
+  color: var(--terminal-text);
+}
+.or{
+  margin: 20px;
+  font-size: 25px;
+  color: var(--unique-color);
+  font-weight: 600;
+}
+.social{
+  width: 100%;
+}
+.social img{
+  margin: 20px;
+}
+.blogs{
+  padding: 20px;
+}
 @media (max-width:600px) {
   nav{
     background-color: transparent;
@@ -306,6 +390,9 @@ main{
     /* overflow-x: hidden; */
     scrollbar-width: none;
     z-index: 99;
+  }
+  .stack{
+    rotate: 0;
   }
   .MobileList{
     display: flex;
@@ -319,21 +406,19 @@ main{
     z-index: 99;
   }
   .MobileList .icons{
-    width: 40px;
-    margin: 5px;
-    height: 50px;
+    width: 30px;
+    margin: 25px 5px;
+    height: 5px;
     display: flex;
     border-radius: 5px;
     align-items: center;
+    justify-content: center;
   }
   .MobileList .icons img{
-    height: 40px;
+    height: 30px;
   }
   .active{
-    background-color: #DA0037;
-  }
-  .backGround{
-    display: none;
+    background-color: #ffffff3c;
   }
   .menu{
     display: none;
@@ -350,7 +435,7 @@ main{
     height: min-content;
   }
   pre{
-    font-size: 25px;
+    font-size: 20px;
   }
   .right{
   margin-left: 0px;
@@ -375,5 +460,12 @@ main{
   main .left,.top .left,.right,.center{
     width: 100vw;
     height: min-content;
+    text-align: center;
+  }
+  .left{
+    padding: 0;
+  }
+  .card{
+    rotate:0deg ;
   }
 }
