--- a/src/App.css
+++ b/src/App.css
@@ -325,17 +325,37 @@ main{
   justify-content: space-around;
   padding-top: 20px;
  }
- .stack{
-  height: 50px;
-  width: 50px;
-  border-radius: 50%;
-  background: rgba(255, 255, 255, 0.242); /* Transparent white */
-  backdrop-filter: blur(10px); /* Blurring effect */
-  -webkit-backdrop-filter: blur(10px); /* Safari support */
+ .card{
+  position: relative;
+  width: 245px;
+ }
+ .line{
+  top: -30%;
+  left: 0%;
+  width: 60%;
+  flex-direction: column;
   display: flex;
+  justify-content: space-between;
+  border: 3px solid;
+  border-color: rgba(255, 255, 255, 0)   ;
+  border-left-color: aqua;
+  height: min-content;
   align-items: center;
-  justify-content: center;
-  border: 4px solid;
+  border-radius: 5px;
+ }
+ .line span{
+  position: relative;
+  margin-top: 50px;
+ }
+ .line span::before{
+  content: " ";
+  height: 10px;
+  width: 10px;
+  background-color: aqua;
+  border-radius: 50%;
+  position:absolute;
+  left: -100%;
+  top: 30%;
  }
 /* ----------------------------------------connect page */
 .terminal{
