--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -1,9 +1,8 @@
 nav {
-    /* height: min-content; */
-    height: 110px;
+    height: min-content;
     background-color: transparent;
     width: 100vw;
-    /* overflow: hidden; */
+    overflow: hidden;
     position: fixed;
     top: 0px;
     padding: 10px 40px;
